[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/audioOff.png" type="Texture" id=1]
[ext_resource path="res://ui/sound-interface/sound-interface.gd" type="Script" id=2]
[ext_resource path="res://assets/audioOn.png" type="Texture" id=3]

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 100, 100 )
modulate_color = Color( 1, 1, 1, 0.490196 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 100, 100 )
modulate_color = Color( 0, 0, 0, 0.490196 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 100, 100 )

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 100, 100 )
modulate_color = Color( 1, 1, 1, 0.490196 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 100, 100 )
modulate_color = Color( 0, 0, 0, 0.490196 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 100, 100 )

[node name="Sound" type="Control"]
anchor_right = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainerOff" type="MarginContainer" parent="."]
margin_right = 64.0
margin_bottom = 64.0
custom_constants/margin_top = 16
custom_constants/margin_left = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOff" type="Button" parent="MarginContainerOff"]
margin_left = 16.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 64.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="MarginContainerOn" type="MarginContainer" parent="."]
visible = false
margin_right = 64.0
margin_bottom = 64.0
custom_constants/margin_top = 16
custom_constants/margin_left = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOn" type="Button" parent="MarginContainerOn"]
margin_left = 16.0
margin_top = 16.0
margin_right = 64.0
margin_bottom = 64.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )

[connection signal="pressed" from="MarginContainerOff/ButtonOff" to="." method="_on_ButtonOff_pressed"]
[connection signal="pressed" from="MarginContainerOn/ButtonOn" to="." method="_on_ButtonOn_pressed"]
